# darkroom-monorepo

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_tech_blog_postgres_ready_baseline.py  0002_tech_blog_task_records.py  0003_tech_blog_article_relevances.py
docs/: README.md
docs/agents/: collaboration_contract.md  planner_methodology.md  shared_principles.md  tester_methodology.md  worker_methodology.md
docs/platform/: agentic_platform_topology.md  agentic_platform_topology_review.md
docs/process/: open_source_scope_v1.md  open_source_split_plan.md  public_monorepo_v1_audit_round2.md  public_monorepo_v1_checklist.md  public_monorepo_v1_delete_manifest.md
docs/tech_blog_monitor/: README.md  quickstart.md
products/tech_blog_monitor/: README.md  agent.py  analyzer.py  archive_store.py  chunking.py  config.py  config_loader.py  config_validator.py  content_fetcher.py  content_quality.py  defaults.py  delivery.py  feed_catalog.py  feedback.py  feedback_cli.py  fetcher.py  insights.py  insights_cli.py  local_scheduler.py  monitor.py  ops.py  qa.py  qa_cli.py  reporter.py  repository_provider.py  retrieval.py  scheduler.py  search.py  search_cli.py  settings.py  state.py
runtime/: factory.py  launcher.py
runtime/clients/: base.py  claude.py  claude_code.py  codex.py  trae.py
runtime/test/: test_claude_client.py  test_codex_client.py  (+2 more)
(+123 files in other folders)
